  01 Sep 2016; Manuel Friedli <manuel@fritteli.ch>
  snowflake-letters-1-r1.ebuild:
  media-fonts/snowflake-letters:  updated to EAPI="6"

  07 Jun 2016; Manuel Friedli <manuel@fritteli.ch> +ChangeLog:
  Added ChangeLog