@@ -1,4 +1,4 @@
-DIST snowflakeletters.zip 157758 BLAKE2B 86df51c94cfe67e41bc6c654e86888df35ac4ea0a0b594af9011b429e04aca5a6e746c994d45e7e5a483aca5542a480e1fff9df5aaa87ca0e462f994f97cceca SHA512 2849333af577ba1a053609841af4f1dfd5142752c8a0933f4f184cb6fdd5bf2b4a5bee1b664925edbc18762726717791ca201d527b2d9d5ccbb4d928c433de89
-EBUILD snowflake-letters-1-r1.ebuild 688 BLAKE2B 99d2720478388ef684ddf2f036452619fb0b297e82ab1a94b72b937cdcc27c7c817a08037abd4a3844d8bcec9962b2214fecdb75fdca4bb83a33520bb2cd7573 SHA512 b16338e6a995d2db9c41181f0fdb7116aaa4af9ae7c7e1348e64c18e651d0f389fcd61b1fe894cabd30e6cd60450ab90a65574ab16d641973b26dd0261041da2
-MISC ChangeLog 220 BLAKE2B 878425e6afaa9f9807ae310414276f420ccb83c44d8a55cee1e5a3879599f0a1e7feb70b71487e2a7a6ab1a0a3f08d4305092da5b689eeb953f97d98c02428bf SHA512 d3b107f6f9ed5d7a8adf4be43efa86e3cb582ad4d63dc47463f133fdaed50a1e8df933d3fbe5e18f68316df5c4158624f223b8c18e3f14dc225c1ee9d033680f
+DIST SnowflakeLetters.ttf 449164 BLAKE2B 5be65e05d1e44c38eb433dd110b477da33b3a80ece2b9a36d4ae21be1907d565db7f4385ff3308fb5993c9c41fddf63830e0d8761046e9536a798c353af8c42e SHA512 51dd45bb327784a4cdebe86c23fe393ec5bb410b8604bf63bec16c3c13d54690349bebb231eec571e7009f78ad8e55533080e484830607abb0c3372e666bb6c8
+EBUILD snowflake-letters-1-r2.ebuild 720 BLAKE2B c462340129c400818f49bf3d7ff2818e85d616012b13f1c98ed7df9092366f7ebb2fafe01f19ab002d0e0bc57b198789539fdf1cf61d8078646ce75b6b19718a SHA512 58756f7e5a985ac6721fc4bd87a5bc3860e610e5ea8dd2f58ca55b4aa21b34eb1148ac564bf0adc812430cf2632196fd686bed02bf8e9aeddc0743c61e532ccd
+MISC ChangeLog 468 BLAKE2B 617ee11f29da53afb647c2e2f7553b3dec547a538e24819d87586c357c4f276e5e07fed2657acd6d0dc3ab91fe7ab055e995ce45ba0ad6500bec31626f9ce025 SHA512 5c8b6795d0cb5f72e62a8acdffb1b222c6ddbc8ba323364359d7c84d72b58aa77ef401a78fe690ea841d8f39bc4a24439abaef726de265b7afa3f5e2bd4893e3
 MISC metadata.xml 248 BLAKE2B cb50cad2c614a99daa2e236f9e0d0fab1ab20a898c0b0f0c28a1387820ab1f2b9dd4d396a3b38f732b493824f96a29ee5894e80e09dbd08dff62c1aaba3feaa0 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2
