@@ -1,3 +1,10 @@
+*snowflake-letters-1-r2 (27 Mar 2021)
+
+  27 Mar 2021; Manuel Friedli <manuel@fritteli.ch>
+  +snowflake-letters-1-r2.ebuild, -snowflake-letters-1-r1.ebuild:
+  media-fonts/snowflake-letters: Fix the ebuild (EAPI=7).  Also, change download
+  source.
+
   01 Sep 2016; Manuel Friedli <manuel@fritteli.ch>
   snowflake-letters-1-r1.ebuild:
   media-fonts/snowflake-letters:  updated to EAPI="6"
